--- a/css/adonis.css
+++ b/css/adonis.css
@@ -206,7 +206,7 @@
  	background-image: url('../img/portfolio/onecalculator.png');	
  }
  .portfolio-box.portfolio-3 {
- 	background-image: url('../img/portfolio/securconfortwebsite.PNG');	
+ 	background-image: url('../img/portfolio/securconfortwebsite.png');	
  }
  .portfolio-box.portfolio-4 {
  	background-image: url('../img/portfolio/heightmapgenerator.png');	
@@ -258,7 +258,7 @@
  	background-image: url("../img/portfolio/onecalculator.png");
  }
  .portfolioModal3 .modal-head {
- 	background-image: url("../img/portfolio/securconfortwebsite.PNG");
+ 	background-image: url("../img/portfolio/securconfortwebsite.png");
  }
  .portfolioModal4 .modal-head {
  	background-image: url("../img/portfolio/heightmapgenerator.png");
