--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,11 @@
-html, body, #root {
+.root {
     height: 100%;
     width: 100%;
-    
+
     margin: 0;
     padding: 0;
+}
+
+.navbar {
+    position: absolute;
 }
