listening to scroll events

--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -12,6 +12,10 @@
 .profile-picture {
     height: 300px;
     width: 300px;
+    max-height: 300px;
+    max-width: 300px;
+    min-height: 300px;
+    min-width: 300px;
 
     margin-right: 60px;
 
