--- a/src/components/home/navbar.css
+++ b/src/components/home/navbar.css
@@ -15,6 +15,16 @@
     font-style: normal;
     line-height: 1em;
     color: #333;
+
+    -webkit-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+}
+
+.elevated {
+    background-color: white;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16);
 }
 
 .navbar-item {
