projects list wip

--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -1,15 +1,7 @@
-.content-container {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 400px;
-    padding-right: 400px;
-
-    display: flex;
-    justify-content: center; /* align horizontal */
-    align-items: center; /* align vertical */
+.container-about {
 }
 
-.profile-picture {
+.profile-picture-about {
     height: 300px;
     width: 300px;
     max-height: 300px;
