--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,4 +1,4 @@
-.root {
+.root-home {
     height: 100%;
     width: 100%;
 
@@ -7,8 +7,4 @@
 
     margin: 0;
     padding: 0;
-}
-
-.navbar {
-    position: fixed;
 }
