--- a/src/components/home/navbar.css
+++ b/src/components/home/navbar.css
@@ -1,6 +1,10 @@
 .navbar {
+    position: fixed;
+    
     height: 100px;
     width: 100%;
+
+    z-index: 100;
 
     display: flex;
     justify-content: center; /* align horizontal */
