--- a/src/components/home/work/projectsContainer.css
+++ b/src/components/home/work/projectsContainer.css
@@ -1,5 +1,9 @@
 .projects-container {    
     display: flex;
+    justify-content: space-between;
     align-items: center; /* align vertical */
-    flex-flow: row wrap;
+    flex-flow: wrap;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
