--- a/src/components/home/work/project.css
+++ b/src/components/home/work/project.css
@@ -1,6 +1,7 @@
-.project-card {
-    width: 30%;
-    height: 340px;
+.project-card-highlight {
+    grid-column-end: span 2;
+    
+    height: 250px;
 
     position: relative;
 
@@ -9,35 +10,47 @@
 
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  }
+}
+
+.project-card {
+    grid-column-end: span 1;
+    
+    height: 250px;
+
+    position: relative;
+
+    border-radius: 4px;
+    overflow: hidden;
+
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
   
-  .project-card:hover {
+.project-card:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
+}
 
-  .info-bar {
-      width: 100%;
-      height: 20%;
-      z-index: 1;
-      background-color: rgba(0, 0, 0, 0.40);
+.info-bar {
+    width: 100%;
+    height: 20%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.60);
 
-      color: white;
+    color: white;
 
-      position: absolute;
-      left: 0px;
-      bottom: 0px;
-  }
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+}
 
-  .project-image {
-      width: 100%;
-      height: 100%;
-      max-width: 100%;
-      max-height: 100%;
-      min-width: 100%;
-      min-height: 100%;
+.project-image {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 
-      display: block;
-      object-fit: cover;
-
-      background-color: red;
-  }
+    display: block;
+    object-fit: cover;
+}
