--- a/src/components/home/work/projectsContainer.css
+++ b/src/components/home/work/projectsContainer.css
@@ -1,9 +1,49 @@
-.projects-container {    
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* align vertical */
-    flex-flow: wrap;
+/* desktop-x-small */
+@media all and (min-width: 0) and (max-width: 480px) {
+	.projects-container {    
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-column-gap: 15px;
+		grid-row-gap: 15px;
+	}
+}
 
-    margin-top: 20px;
-    margin-bottom: 20px;
+/* desktop-small */
+@media all and (min-width: 481px) and (max-width: 840px) { 
+	.projects-container {    
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-column-gap: 15px;
+		grid-row-gap: 15px;
+	}  
+}
+
+/* desktop-medium */
+@media all and (min-width: 841px) and (max-width: 1280px) {  
+	.projects-container {    
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 15px;
+		grid-row-gap: 15px;
+	}
+}
+
+/* desktop-large */
+@media all and (min-width: 1281px) and (max-width: 1600px) {  
+	.projects-container {    
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 15px;
+		grid-row-gap: 15px;
+	}  
+}
+
+/* desktop-xlarge */
+@media all and (min-width: 1601px) and (max-width: 1920px) { 
+	.projects-container {    
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 15px;
+		grid-row-gap: 15px;
+	}
 }
