--- a/src/components/home/work/labelsContainer.css
+++ b/src/components/home/work/labelsContainer.css
@@ -1,6 +1,5 @@
 .labels-container {
     display: flex;
     flex-flow: row wrap;
-    align-content: space-between;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
