--- a/src/components/home/work/project.css
+++ b/src/components/home/work/project.css
@@ -1,21 +1,20 @@
-.project-card-highlight {
-    grid-column-end: span 2;
-    
-    height: 250px;
-
-    position: relative;
-
-    border-radius: 4px;
-    overflow: hidden;
-
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+.normal-card {
+    grid-column-end: span 1;
 }
 
-.project-card {
+.highlight-card {
     grid-column-end: span 1;
-    
-    height: 250px;
+}
+
+/* desktop-small */
+@media all and (min-width: 481px) { 
+	.highlight-card {
+        grid-column-end: span 2;
+    }
+}
+
+.project-card {    
+    height: 256px;
 
     position: relative;
 
@@ -34,13 +33,20 @@
     width: 100%;
     height: 20%;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.60);
 
+    background-color: rgba(0, 0, 0, 0.70);
     color: white;
 
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    
     position: absolute;
     left: 0px;
-    bottom: 0px;
+    bottom: 0px;   
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .project-image {
