--- a/src/components/home/work/project.css
+++ b/src/components/home/work/project.css
@@ -21,15 +21,16 @@
     border-radius: 4px;
     overflow: hidden;
 
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
   
 .project-card:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 12px 28px rgba(0,0,0,0.25), 0 8px 10px rgba(0,0,0,0.22);
 }
 
 .info-bar {
+    box-sizing: border-box;
     width: 100%;
     height: 20%;
     z-index: 1;
@@ -43,6 +44,9 @@
     position: absolute;
     left: 0px;
     bottom: 0px;   
+
+    padding-left: 16px;
+    padding-right: 8px;
     
     display: flex;
     align-items: center;
