--- a/src/components/home/contact/contactItem.css
+++ b/src/components/home/contact/contactItem.css
@@ -8,7 +8,8 @@
 .contact-item-icon {
     font-size: 24px;
     
-    margin-bottom: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
     margin-right: 16px;
 
     width: 56px;
@@ -18,11 +19,16 @@
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(0, 0, 0, 0.06);
+    /* background-color: rgba(0, 0, 0, 0.04);
 
-    box-shadow: 0 3px 6px rgba(0,0,0,0.20);
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3); */
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
     border-radius: 360px;
+}
+
+.contact-item-icon:hover {
+    box-shadow: 0 10px 28px rgba(0,0,0,0.25), 0 6px 10px rgba(0,0,0,0.22);
 }
 
 .contact-item-text {
