--- a/src/components/home/contact/contact.css
+++ b/src/components/home/contact/contact.css
@@ -1,6 +1,6 @@
 .contact-container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-row-gap: 16px;
 
     font-size: 11px;
