--- a/src/components/home/contact/contactItem.css
+++ b/src/components/home/contact/contactItem.css
@@ -7,10 +7,6 @@
 
 .contact-item-icon {
     font-size: 24px;
-    
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-right: 16px;
 
     width: 56px;
     height: 56px;
@@ -31,6 +27,28 @@
     box-shadow: 0 10px 28px rgba(0,0,0,0.25), 0 6px 10px rgba(0,0,0,0.22);
 }
 
-.contact-item-text {
-    
+/* desktop-x-small */
+@media all and (min-width: 0) and (max-width: 480px) { 
+    .contact-item-icon-margin {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        margin-right: 8px;
+    }
+
+    .contact-item-text {
+        font-size: 9px;
+    }
+}
+
+/* desktop-small */
+@media all and (min-width: 481px) {
+    .contact-item-icon-margin {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        margin-right: 16px;
+    }
+
+    .contact-item-text {
+        
+    }  
 }
