--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,8 @@ a {
 }
 
 .text-unselectable {
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+    
     -webkit-user-select: none;  
     -moz-user-select: none;    
     -ms-user-select: none;      
@@ -74,4 +76,8 @@ a {
 
 .clickable {
     cursor: pointer;
+}
+
+clickable:focus {
+    outline:none;
 }
