--- a/src/components/home/work/projectDetails/projectDetails.css
+++ b/src/components/home/work/projectDetails/projectDetails.css
@@ -3,11 +3,16 @@
     align-items: center;
     justify-content: center;
 
-    -webkit-animation: navbar-item-background-change 10000ms infinite;
+    height: 90%;
+    width: 100%;    
+
+    background-color: rgba(0, 0, 0, 0.10);
+
+    /* -webkit-animation: navbar-item-background-change 10000ms infinite;
     -moz-animation: navbar-item-background-change 10000ms infinite;
     -o-animation: navbar-item-background-change 10000ms infinite;
     -ms-animation: navbar-item-background-change 10000ms infinite;
-    animation: navbar-item-background-change 10000ms infinite;
+    animation: navbar-item-background-change 10000ms infinite; */
 }
 
 .project-details-card {
@@ -17,9 +22,55 @@
     border-radius: 4px;
     border-color: transparent;
 
+    overflow: hidden;
+
     box-shadow: 0 3px 6px rgba(0,0,0,0.32), 0 3px 4px rgba(0,0,0,0.34);
 
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+/* desktop-x-small */
+@media all and (min-width: 0) and (max-width: 480px) { 
+    .project-details-card.margin {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+}
+
+/* desktop-small */
+@media all and (min-width: 481px) and (max-width: 840px) {
+    .project-details-card.margin {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }   
+}
+
+/* desktop-medium */
+@media all and (min-width: 841px) and (max-width: 1280px) {
+    .project-details-card.margin {
+        margin-top: 64px;
+        margin-bottom: 64px;
+    }
+}
+
+/* desktop-large */
+@media all and (min-width: 1281px) {  
+    .project-details-card.margin {
+        margin-top: 112px;
+        margin-bottom: 112px;
+    }
+}
+
+.project-details-image {
+    width: 100%;
+    height: 384px;
+    max-width: 100%;
+    max-height: 384px;
+    min-width: 100%;
+    min-height: 384px;
+
+    display: block;
+    object-fit: cover;
 }
 
 @-webkit-keyframes navbar-item-background-change {
